fix: overflow showing on smaller screens and test thing in timetable css

--- a/src/public/assets/css/catppuccin-mocha/timetable.module.css
+++ b/src/public/assets/css/catppuccin-mocha/timetable.module.css
@@ -27,7 +27,6 @@
     height: 100%;
     min-width: 0;
     max-width: calc(100vw - 185px);
-
 }
 
 .t-container {
@@ -54,7 +53,7 @@
 
 .t-header {
     text-align: center;
-    min-height: 40px;
+    padding: 10px 0 10px 0;
     font-size: 12px;
     font-weight: 400;
     background: var(--surface1);
@@ -66,7 +65,7 @@
     flex-grow: 1;
     overflow-y: auto;
     min-height: 0;
-    max-height: 100%;
+    max-height: 90%;
 }
 
 .t-header,
